--- a/src/assets/styles/_card.scss
+++ b/src/assets/styles/_card.scss
@@ -212,7 +212,7 @@
       @apply uppercase text-sm;
     } 
     &-info {
-      @apply mt-1 text-main;
+      @apply mt-1;
       line-height: 1.2;
     }
 
