--- a/src/assets/styles/_btn.scss
+++ b/src/assets/styles/_btn.scss
@@ -76,7 +76,7 @@
       @apply flex flex-col gap-4 mt-8;
 
       a {
-        @apply flex items-center gap-2 font-semibold ;
+        @apply flex items-center gap-2 font-semibold;
 
         &:hover {
           svg {
@@ -84,13 +84,11 @@
           }
         }
       }
-  
+
       svg {
         @apply bg-main text-white dark:bg-dark_3 dark:text-white w-[40px] h-[40px] rounded-sm flex items-center justify-center p-3 transition duration-300;
       }
     }
-
-   
   }
 
   .contact {
@@ -167,14 +165,14 @@
   .form {
     @apply bg-gray-100 dark:bg-dark_3 dark:text-white rounded-md p-4 sm:p-10 flex flex-col gap-4 max-w-[900px] mx-auto;
 
-    input:not([type='radio']):not([type='checkbox']), textarea {
+    input:not([type="radio"]):not([type="checkbox"]),
+    textarea {
       @apply w-full p-4 px-8 resize-none rounded-sm border border-white focus-visible:outline-none focus-visible:border-gray-200 border-2 dark:bg-dark_4 dark:text-white dark:border-gray-800;
     }
 
-    [type='submit']{
+    [type="submit"] {
       @apply w-full rounded-sm;
     }
-   
   }
 
   .icon {
@@ -182,6 +180,18 @@
 
     svg {
       @apply w-[60px] h-[60px];
+    }
+  }
+
+  .slider-nav {
+    @apply flex gap-2 items-center;
+
+    button {
+      @apply w-[40px] h-[40px] flex items-center justify-center rounded-sm bg-gray-100 dark:bg-dark_4 dark:text-white;
+
+      &:hover, &:active, &:focus {
+        @apply bg-main text-white;
+      }
     }
   }
 }
